update tests & codes
